objects/SFDC_Class__c.object
<CustomObject>
    <description>Track the date and location of where your various Courses will be taught, and who has enrolled in this Class.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the class active and open for enrollment or shown</description>
        <inlineHelpText>Is this class active and open for enrollment?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Begin_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date the Class/Section begins</description>
        <inlineHelpText>Enter date that the class or section begins</inlineHelpText>
        <label>Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instructor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Instructor not known</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>ClassroomStaff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>R00N40000001QAyhEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Offered__c</fullName>
        <label>Date Offered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date the class/section ends</description>
        <inlineHelpText>Enter the date the class or section ends</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lab Room</fullName>
                </value>
                <value>
                    <fullName>Training Room Bldg A Room 234</fullName>
                </value>
                <value>
                    <fullName>Training Room Bldg A Room 254</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Meet Friday?</description>
        <inlineHelpText>Does the class meet Fridays?</inlineHelpText>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Capacity__c</fullName>
        <label>Max Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Meeting Monday</description>
        <inlineHelpText>Does the class meet Monday?</inlineHelpText>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This links the class to the course</description>
        <label>Course</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Class</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>R00N40000001QAyiEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Meet Saturday?</description>
        <inlineHelpText>Does the class meet Saturday?</inlineHelpText>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <description>For a class that has multiple sections</description>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Meet Sunday</description>
        <inlineHelpText>Does the class meet Sunday?</inlineHelpText>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Meet Thursdays?</description>
        <inlineHelpText>Does the class meet Thursdays?</inlineHelpText>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Meet Tuesday</description>
        <inlineHelpText>Does the class meet on Tuesdays?</inlineHelpText>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Meet Wednesday?</description>
        <inlineHelpText>Does the class meet on Wednesday?</inlineHelpText>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>Active_Classes</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Classes</label>
    </listViews>
    <listViews>
        <fullName>AllCourses</fullName>
        <columns>NAME</columns>
        <columns>Product2__c</columns>
        <columns>Facility__c</columns>
        <columns>Contact__c</columns>
        <columns>Max_Capacity__c</columns>
        <columns>Date_Offered__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Courses</label>
    </listViews>
    <listViews>
        <fullName>PublicSpeaking</fullName>
        <columns>NAME</columns>
        <columns>Product2__c</columns>
        <columns>Date_Offered__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Speaking</value>
        </filters>
        <label>Public Speaking</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>